python-pip (1.5.6-1) UNRELEASED; urgency=medium

  * Team upload.
  * New upstream release.
  * d/control: Update python-pip-whl dependencies.
  * d/patches/de-vendorize.patch: Refreshed.
  * d/patches/use-venv-wheels.patch: Handle virtualenv created venvs.
  * d/pip.dependencies: Added.  (Closes: #749692)
  * d/python-pip-whl.install: Updated.
  * d/README.debian: Added.

 -- Barry Warsaw <barry@debian.org>  Thu, 29 May 2014 18:48:06 -0400

python-pip (1.5.5-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * d/patches/de-vendorize.patch: Refreshed.
  * d/patches/use-venv-wheels.patch:
    - When inside a virtual environment, prepend to sys.path any wheels found
      in <venv>/lib/python-wheels
    - Adjust setup.py's test_requires since python-virtualenv is enough to
      satisfy the requirement, but the tools aren't smart enough to know this.
  * d/compat: Bump to version 8.
  * d/control:
    - Add python-pip-whl binary package.
    - Add to Build-Depends: python{,3}-mock, python{,3}-test,
      python{,3}-scripttest, python-virtualenv, python3-wheel
    - Update other Build-Depends.
    - wrap-and-sort
  * d/rules:
    - Build and install the pip universal wheel.
    - Use --build-system=pybuild.
    - Remove unnecessary files here instead of in d/*.pyremove.
  * d/python-pip-whl.install: Added.
  * d/python-pip.install: Removed.
  * d/python-pip.pyremove: Removed.
  * d/python3-pip.install: Removed.
  * d/python3-pip.manpages: Updated.
  * d/python3-pip.pyremove: Removed.

 -- Barry Warsaw <barry@debian.org>  Thu, 15 May 2014 16:47:46 -0400

python-pip (1.5.4-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * d/patches:
    - system-ca-certificates.patch: Removed.  This is obsoleted by the
      vendorizing (and on Debian, de-vendorizing) of the requests library.
    - no-python-specific-scripts.patch: Removed.  Upstream renamed pip-X.Y
      to pipX.Y but adopts our pipX name as well.  I don't think it hurts